Se agregó una cabecera mas bonis

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,9 @@
 
 </head>
 <body>
+    <div id="cabecera">
     <h1>Blog post de mi historia :D</h1>
-
+    </div>
     <p>Esta es la historia de Adrian
 
         Adrian tiene una historia
