Se agregó contenido adicional a la info

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,5 +19,15 @@
         Hola Adrian.
         
         Es alto y super amigable :)</p>
+<hr>
+        <p>
+            Esta es la historia de Adrian
+
+Adrian tiene una historia
+
+Mi historia es muy bonita.
+
+Hola Adrian.
+        </p>
 </body>
 </html>
