--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+    <div id="container">
     <div id="cabecera">
     <h1>Blog post de mi historia :D</h1>
     </div>
@@ -30,5 +31,6 @@ Mi historia es muy bonita.
 
 Hola Adrian.
         </p>
+    </div>
 </body>
 </html>
