--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
     <div id="cabecera">
-    <h1>Blog post de mi historia :D</h1>
+    <h1>Blog la marvillosa historia de Adrian :D</h1>
     </div>
     <p>Esta es la historia de Adrian
 
