Se agregó el logo y se cambió colores al header :D

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,9 +9,21 @@
 </head>
 <body>
     <div id="container">
-    <div id="cabecera">
-    <h1>Blog la marvillosa historia de Adrian :D</h1>
-    </div>
+    <header id="cabecera">
+        <figure class="logo">
+            <img src="./imgs/logo.png" alt="Un logito :)" width="35" >
+        </figure>
+        <div class="titulo">
+            <span>Blog la marvillosa historia de Adrian :D</span>
+        </div>
+        <nav class="navigation">
+            <ul>
+                <li><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <p>Esta es la historia de Adrian <br>
         Adrian tiene una historia        
         Mi historia es muy bonita. <br>        
